; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mn10300/boot/compressed/extr_misc.c_flush_window_low.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mn10300/boot/compressed/extr_misc.c_flush_window_low.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crc = common dso_local global i32 0, align 4
@window = common dso_local global i32* null, align 8
@output_data = common dso_local global i32* null, align 8
@output_ptr = common dso_local global i64 0, align 8
@outcnt = common dso_local global i32 0, align 4
@crc_32_tab = common dso_local global i32* null, align 8
@bytes_out = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @flush_window_low to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flush_window_low() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = load i32, i32* @crc, align 4
  store i32 %6, i32* %1, align 4
  %7 = load i32*, i32** @window, align 8
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** @output_data, align 8
  %9 = load i64, i64* @output_ptr, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  store i32* %10, i32** %4, align 8
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %32, %0
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @outcnt, align 4
  %14 = icmp ult i32 %12, %13
  br i1 %14, label %15, label %35

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = getelementptr inbounds i32, i32* %16, i32 1
  store i32* %17, i32** %3, align 8
  %18 = load i32, i32* %16, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = getelementptr inbounds i32, i32* %19, i32 1
  store i32* %20, i32** %4, align 8
  store i32 %18, i32* %19, align 4
  store i32 %18, i32* %5, align 4
  %21 = load i32*, i32** @crc_32_tab, align 8
  %22 = load i32, i32* %1, align 4
  %23 = load i32, i32* %5, align 4
  %24 = xor i32 %22, %23
  %25 = and i32 %24, 255
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %21, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %1, align 4
  %30 = ashr i32 %29, 8
  %31 = xor i32 %28, %30
  store i32 %31, i32* %1, align 4
  br label %32

32:                                               ; preds = %15
  %33 = load i32, i32* %2, align 4
  %34 = add i32 %33, 1
  store i32 %34, i32* %2, align 4
  br label %11

35:                                               ; preds = %11
  %36 = load i32, i32* %1, align 4
  store i32 %36, i32* @crc, align 4
  %37 = load i32, i32* @outcnt, align 4
  %38 = load i32, i32* @bytes_out, align 4
  %39 = add nsw i32 %38, %37
  store i32 %39, i32* @bytes_out, align 4
  %40 = load i32, i32* @outcnt, align 4
  %41 = sext i32 %40 to i64
  %42 = load i64, i64* @output_ptr, align 8
  %43 = add i64 %42, %41
  store i64 %43, i64* @output_ptr, align 8
  store i32 0, i32* @outcnt, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
